<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bInitialize"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_width="match_parent"
            android:text="@string/initialize"
            android:textSize="@dimen/button_text_size" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bLoadBanner"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/button_half_margin"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:text="@string/load_banner"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bShowBanner"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_half_margin"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:text="@string/show_banner"
                android:textSize="@dimen/button_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bLoadMrec"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/button_half_margin"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:text="@string/load_mrec"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bShowMrec"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_half_margin"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:text="@string/show_mrec"
                android:textSize="@dimen/button_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bLoadInterstitial"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/button_half_margin"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:text="@string/load_interstitial"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bShowInterstitial"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_half_margin"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:text="@string/show_interstitial"
                android:textSize="@dimen/button_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bLoadRewarded"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/button_half_margin"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:text="@string/load_rewarded"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bShowRewarded"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_half_margin"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:text="@string/show_rewarded"
                android:textSize="@dimen/button_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bLoadNative"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/button_half_margin"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:text="@string/load_native"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bShowNative"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_half_margin"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:text="@string/show_native"
                android:textSize="@dimen/button_text_size" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/adContainer"
            android:layout_height="match_parent"
            android:layout_width="match_parent" />

    </LinearLayout>

</ScrollView>